// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar renders 1`] = `
<div>
  <div
    class="progress-bar-root progress-group"
  >
    <div
      class="progress"
    >
      <div
        class="progress-bar"
        role="progressbar"
        style="width: 0%;"
      />
    </div>
    <div
      class="progress-group-addon"
    >
      0%
    </div>
  </div>
</div>
`;

exports[`ProgressBar should render a complete progress bar without error 1`] = `
<div>
  <div
    class="progress-bar-root progress-group progress-success"
  >
    <div
      class="progress"
    >
      <div
        class="progress-bar"
        role="progressbar"
        style="width: 100%;"
      />
    </div>
    <div
      class="progress-group-addon"
    >
      <div
        class="progress-group-feedback"
      >
        <svg
          class="lexicon-icon lexicon-icon-check-circle icon-root"
          role="presentation"
        >
          <use
            href="#check-circle"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProgressBar should render a progress bar with error 1`] = `
<div>
  <div
    class="progress-bar-root progress-group progress-danger"
  >
    <div
      class="progress"
    >
      <div
        class="progress-bar"
        role="progressbar"
        style="width: 0%;"
      />
    </div>
    <div
      class="progress-group-addon"
    >
      <div
        class="progress-group-feedback"
      >
        <svg
          class="lexicon-icon lexicon-icon-times-circle icon-root"
          role="presentation"
        >
          <use
            href="#times-circle"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
